[modify package name]

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hodgepodge",
-  "version": "1.0.0",
+  "name": "utils-hodgepodge",
+  "version": "0.1.0",
   "description": "A hodgepodge of some interesting tools and thoughts",
   "author": "rickyzhz@foxmail.com",
   "license": "MIT"
